# hex-analytics-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  main.py  pyproject.toml  render.yaml  web_main.py
plans/: agentic_brain_module_architecture.txt  visualization_engine_architecture.txt
plans folder/: database_execution_engine_plan.txt  slack_gateway_module_plan.txt
src/hex/app/: __init__.py  orchestrator.py
src/hex/brain/: __init__.py  config.py  llm_client.py  orchestrator.py  retry.py  semantic_layer.py  sql_validator.py
src/hex/brain/prompt_templates/: correction.txt  system.txt  user.txt
src/hex/brain/tests/: test_llm_client.py  test_orchestrator.py  test_retry.py  test_semantic_layer.py  test_sql_validator.py
src/hex/db/: __init__.py  csv_loader.py  engine.py  sanitizer.py  schema.py  seed.py
src/hex/db/tests/: test_csv_loader.py  test_engine.py  test_sanitizer.py  test_seed.py
src/hex/gateway/: __init__.py  config.py
src/hex/gateway/core/: event_listener.py  request_parser.py  response_sender.py  router.py
src/hex/gateway/middleware/: dedup.py  rate_limiter.py
src/hex/gateway/models/: slack_request.py  slack_response.py
src/hex/gateway/tests/: test_dedup.py  test_rate_limiter.py  test_request_parser.py  test_response_sender.py  (+1 more)
src/hex/shared/: __init__.py  errors.py  interfaces.py  logging.py  models.py
src/hex/tests/: test_compute_answer.py  test_e2e_flow.py  test_orchestrator_integration.py
src/hex/viz/: __init__.py  config.py  engine.py  export.py  inference.py  styling.py  validators.py
src/hex/web/: __init__.py  config.py  server.py  session.py
tasks/: lessons.md  todo.md
(+14 files in other folders)
