[project]
name = "hex-bot"
version = "0.1.0"
description = "Agentic Analytics Slack Bot inspired by Hex.tech"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    "anthropic>=0.40",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "faker>=22.0",
    "aiohttp>=3.9",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
